# TwitterClone

./: pyproject.toml
authentication/: urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
templates/: LoginForm.html  SignupForm.html  addtweet.html  authorinfo.html  base.html  index.html  notifications.html  tweet_detail.html
templates/static/: twitter.css
tweet/: admin.py  forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_user.py  0003_auto_20200529_1959.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
