[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["avelyno <kou2295@calu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
